Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/DeweyAnalysis__c.object-meta.xml
<CustomObject>
    <description>Stores metadata and scores for each Dewey org assessment run. Parent of DeweyFinding__c and DeweyDelta__c.</description>
    <label>Dewey Analysis</label>
    <nameField>
        <displayFormat>DEWEY-{00000}</displayFormat>
        <label>Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dewey Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>