Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/AnalysisDate__c.field-meta.xml
<CustomField>
    <fullName>AnalysisDate__c</fullName>
    <label>Analysis Date</label>
    <type>DateTime</type>
    <required>true</required>
    <description>Timestamp of when the analysis run started.</description>
</CustomField>