Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/ApexCount__c.field-meta.xml
<CustomField>
    <fullName>ApexCount__c</fullName>
    <label>Apex Classes</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>