Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/CoverageDelta__c.field-meta.xml
<CustomField>
    <fullName>CoverageDelta__c</fullName>
    <description>Difference between current TestCoveragePct__c and previous analysis TestCoveragePct__c. Positive = improvement, negative = degradation. Null on first run or when coverage was not requested on both runs.</description>
    <label>Coverage Δ</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>