Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/CriticalDelta__c.field-meta.xml
<CustomField>
    <fullName>CriticalDelta__c</fullName>
    <description>Difference between current FindingCritical__c count and previous analysis. Positive = more critical findings, negative = fewer. Null on first run.</description>
    <label>Critical Δ</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>