Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/DisparuFindings__c.field-meta.xml
<CustomField>
    <fullName>DisparuFindings__c</fullName>
    <description>Number of findings that were active (Découvert or Pris en charge) in a previous run but not detected in this run. Marked Disparu and tracked via IsDisparuInRun__c junction. Null on first run.</description>
    <label>Disappear</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>