Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Populated when Status = Failed. Contains the Python stack trace or error summary.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>