Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/FindingCritical__c.field-meta.xml
<CustomField>
    <fullName>FindingCritical__c</fullName>
    <label>Critical Findings</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>