Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/FindingInfo__c.field-meta.xml
<CustomField>
    <fullName>FindingInfo__c</fullName>
    <label>Info Findings</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>