Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/FindingMajor__c.field-meta.xml
<CustomField>
    <fullName>FindingMajor__c</fullName>
    <label>Major Findings</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>