Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/FindingMinor__c.field-meta.xml
<CustomField>
    <fullName>FindingMinor__c</fullName>
    <label>Minor Findings</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>