Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/FindingTotal__c.field-meta.xml
<CustomField>
    <fullName>FindingTotal__c</fullName>
    <label>Total Findings</label>
    <type>Number</type>
    <formula>FindingCritical__c + FindingMajor__c + FindingMinor__c + FindingInfo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>