Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/FlowCount__c.field-meta.xml
<CustomField>
    <fullName>FlowCount__c</fullName>
    <label>Flows</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>