Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/LwcCount__c.field-meta.xml
<CustomField>
    <fullName>LwcCount__c</fullName>
    <label>LWC Components</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>