Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/MajorDelta__c.field-meta.xml
<CustomField>
    <fullName>MajorDelta__c</fullName>
    <label>Major Δ</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Difference between current FindingMajor__c count and previous analysis. Positive = more major findings, negative = fewer. Null on first run.</description>
</CustomField>