Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/NewFindings__c.field-meta.xml
<CustomField>
    <fullName>NewFindings__c</fullName>
    <label>New Findings</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Number of new DeweyFinding__c records created in this run (not seen in any previous run for this source). Null on first run (all findings are new by definition).</description>
</CustomField>