Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/PreviousAnalysis__c.field-meta.xml
<CustomField>
    <fullName>PreviousAnalysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the most recent completed analysis run for the same source, used for delta computation. Null on first run.</description>
    <label>Previous Analysis</label>
    <referenceTo>DeweyAnalysis__c</referenceTo>
    <relationshipLabel>Follow-up Analyses</relationshipLabel>
    <relationshipName>FollowUpAnalyses</relationshipName>
    <type>Lookup</type>
</CustomField>