Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Text</type>
    <length>80</length>
    <description>Stable project identifier used to scope finding deduplication and delta computation across multiple analysis runs (e.g. "xRM", "xrmassbl3"). Passed via --project at assessment time. Source__c records the exact snapshot/branch path.</description>
</CustomField>