Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>all</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>apex</fullName>
                <label>Apex only</label>
            </value>
            <value>
                <fullName>flows</fullName>
                <label>Flows only</label>
            </value>
            <value>
                <fullName>security</fullName>
                <label>Security only</label>
            </value>
            <value>
                <fullName>omni</fullName>
                <label>OmniStudio only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>