Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/ScoreAdapt__c.field-meta.xml
<CustomField>
    <fullName>ScoreAdapt__c</fullName>
    <description>Standard vs Custom adaptation score (0-100). Measures how well the org follows platform-native patterns.</description>
    <label>Adaptation Score</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>