Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/ScoreAdopt__c.field-meta.xml
<CustomField>
    <fullName>ScoreAdopt__c</fullName>
    <description>No-code / low-code adoption score (0-100). Measures platform feature usage vs custom code ratio.</description>
    <label>Adopt</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>