Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/ScoreDelta__c.field-meta.xml
<CustomField>
    <fullName>ScoreDelta__c</fullName>
    <label>Score Δ</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Difference between current ScoreGlobal__c and previous analysis ScoreGlobal__c. Positive = improvement, negative = degradation. Null on first run.</description>
</CustomField>