Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/ScoreGlobal__c.field-meta.xml
<CustomField>
    <fullName>ScoreGlobal__c</fullName>
    <description>Raw weighted customization score. Sum of weighted component counts. Use ScoreLevel__c for a human-readable level.</description>
    <label>Global Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>