Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Git project name (from remote URL or root folder name) of the analysed source.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>