Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/SourceBranch__c.field-meta.xml
<CustomField>
    <fullName>SourceBranch__c</fullName>
    <label>Source Branch</label>
    <type>Text</type>
    <length>100</length>
    <description>Git branch analysed. Populated only for remote source runs.</description>
</CustomField>