Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysis__c/fields/TestCoveragePct__c.field-meta.xml
<CustomField>
    <fullName>TestCoveragePct__c</fullName>
    <description>Org-level Apex + Flow test coverage average (%), fetched via the Tooling API when the assessment is run with --coverage. Null when coverage was not requested.</description>
    <label>Test Coverage %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>